@@ -10,7 +10,7 @@ Description: Convenient functions to help implementing
     estimation of complex models using data cloning
     and Bayesian Markov chain Monte Carlo methods.
 License: GPL-2
-Depends: R (>= 2.7.0), rjags, coda (>= 0.13), R2WinBUGS, mefa (>= 2.0), mvnormtest
+Depends: R (>= 2.7.0), rjags, coda (>= 0.13), R2WinBUGS, mvnormtest
 SystemRequirements: jags (== 1.0.3)
 URL: https://r-forge.r-project.org/projects/dcr/
 LazyLoad: yes
