@@ -1,7 +1,7 @@
 lambdamax.diag <-
 function(x)
 {
-    y <- report(x, array)
+    y <- mcmcapply(x, array)
     rval <- if (nvar(x) == 1) {
         sd(y)
     } else {
