@@ -9,7 +9,19 @@ function(y, x, probs = seq(0, 1, 0.25), na.rm = FALSE)
         y <- y[noNA]
         x <- x[noNA]
     }
-    q <- qvector(x, probs = seq(0, 1, 0.25))
+
+#`qvector` <-
+#function(x, probs = seq(0, 1, 0.25), na.rm = FALSE, ...)
+#{
+    nrun <- length(probs)-1
+    qa <- quantile(x, probs, na.rm = na.rm)
+    q <- rep(probs[2], length(x))
+    for (i in 2:nrun)
+        q[which(x > qa[i] & x <= qa[(i+1)])] <- probs[(i+1)]
+#return(out)
+#}
+
+#    q <- qvector(x, probs = seq(0, 1, 0.25))
     z <- as.factor(q)
     y <- ifelse(y > 0, 1, 0)
     m <- coef(glm(y ~ z, family=binomial))
