@@ -1,3 +1,3 @@
 vcov.mcmc.list <-
 function(object, ...)
-    cov(report(object, array))
+    cov(mcmcapply(object, array))
